[gd_scene load_steps=19 format=3 uid="uid://b05sp5l322hwj"]

[ext_resource type="Script" uid="uid://4veva7m8odhu" path="res://scenes/player_controller.gd" id="1_0upji"]
[ext_resource type="PhysicsMaterial" uid="uid://cddgcfgky4cvy" path="res://resources/player_node_physical_material.tres" id="1_4m5hh"]
[ext_resource type="Script" uid="uid://2stj2a2pqvks" path="res://states/standing.gd" id="3_cvrci"]
[ext_resource type="Script" uid="uid://tou3gpocanin" path="res://states/walking.gd" id="4_f5igj"]
[ext_resource type="Script" uid="uid://bdcghqcq6h7ss" path="res://states/running.gd" id="5_0oqto"]
[ext_resource type="Script" uid="uid://bod31hxs7vufj" path="res://states/falling.gd" id="5_8whgg"]
[ext_resource type="Script" uid="uid://cseqn5bviowfh" path="res://states/sliding.gd" id="7_6qaro"]
[ext_resource type="Script" uid="uid://b2m7fipxxh1qp" path="res://states/crouching.gd" id="8_fuo7r"]
[ext_resource type="Script" uid="uid://dum6vxg0thpke" path="res://scripts/headbob.gd" id="9_7u8l0"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_0upji"]
radius = 0.25
height = 1.5

[sub_resource type="CapsuleMesh" id="CapsuleMesh_cvrci"]
radius = 0.25
height = 1.5
radial_segments = 16
rings = 4

[sub_resource type="PlaneMesh" id="PlaneMesh_4m5hh"]
size = Vector2(1, 2)

[sub_resource type="GDScript" id="GDScript_fuo7r"]
script/source = "extends Node


## The StateMachine node is a container for the different states.
## Each child must contain a script that have enter(), process(), and leave() functions.
"

[sub_resource type="CylinderMesh" id="CylinderMesh_6qaro"]
top_radius = 0.05
bottom_radius = 0.05
height = 0.05

[sub_resource type="CylinderMesh" id="CylinderMesh_0oqto"]
top_radius = 0.0

[sub_resource type="BoxMesh" id="BoxMesh_f5igj"]
size = Vector3(0.185, 0.225, 0.305)

[sub_resource type="CylinderShape3D" id="CylinderShape3D_7u8l0"]
height = 1.0
radius = 0.2

[sub_resource type="LabelSettings" id="LabelSettings_fuo7r"]
font_size = 26
outline_size = 10
outline_color = Color(0, 0, 0, 1)
shadow_size = 15
shadow_color = Color(0, 0, 0, 0.0431373)

[node name="player_base" type="Node3D"]

[node name="player_node" type="RigidBody3D" parent="."]
disable_mode = 2
axis_lock_angular_x = true
axis_lock_angular_y = true
axis_lock_angular_z = true
physics_material_override = ExtResource("1_4m5hh")
can_sleep = false
continuous_cd = true
contact_monitor = true
max_contacts_reported = 2
linear_damp_mode = 1
linear_damp = 0.1
script = ExtResource("1_0upji")
debug_hud_update_delay = 5.0

[node name="CollisionShape3D" type="CollisionShape3D" parent="player_node"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.15, 0)
shape = SubResource("CapsuleShape3D_0upji")

[node name="MeshInstance3D" type="MeshInstance3D" parent="player_node/CollisionShape3D"]
visible = false
mesh = SubResource("CapsuleMesh_cvrci")
skeleton = NodePath("")

[node name="slope_aligner_helper" type="Node3D" parent="player_node"]
transform = Transform3D(1, 0, 0, 0, 1.31134e-07, -1, 0, 1, 1.31134e-07, 0, 0, 0)

[node name="slope_aligner" type="MeshInstance3D" parent="player_node/slope_aligner_helper"]
transform = Transform3D(1, 0, 0, 0, 1.31134e-07, 1, 0, -1, 1.31134e-07, 0, 0, 0)
visible = false
mesh = SubResource("PlaneMesh_4m5hh")
skeleton = NodePath("../..")

[node name="Extensions" type="Node3D" parent="player_node"]

[node name="StateMachine" type="Node" parent="player_node/Extensions"]
script = SubResource("GDScript_fuo7r")

[node name="standing" type="Node" parent="player_node/Extensions/StateMachine"]
script = ExtResource("3_cvrci")

[node name="walking" type="Node" parent="player_node/Extensions/StateMachine"]
script = ExtResource("4_f5igj")

[node name="falling" type="Node" parent="player_node/Extensions/StateMachine"]
script = ExtResource("5_8whgg")

[node name="running" type="Node" parent="player_node/Extensions/StateMachine"]
script = ExtResource("5_0oqto")

[node name="sliding" type="Node" parent="player_node/Extensions/StateMachine"]
script = ExtResource("7_6qaro")

[node name="crouching" type="Node" parent="player_node/Extensions/StateMachine"]
script = ExtResource("8_fuo7r")

[node name="Modules" type="Node" parent="player_node/Extensions"]

[node name="Headbob" type="Node" parent="player_node/Extensions/Modules"]
script = ExtResource("9_7u8l0")

[node name="cam_container" type="Node3D" parent="player_node"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.5, 0)
top_level = true

[node name="cam_effects" type="Node3D" parent="player_node/cam_container"]

[node name="player_camera" type="Camera3D" parent="player_node/cam_container/cam_effects"]
doppler_tracking = 2
current = true
fov = 90.0
near = 0.002
far = 300.0

[node name="arrow" type="MeshInstance3D" parent="player_node/cam_container/cam_effects/player_camera"]
transform = Transform3D(0.1, 0, 0, 0, 0.1, 0, 0, 0, 0.1, 0.3, -0.2, -0.5)
visible = false
mesh = SubResource("CylinderMesh_6qaro")
skeleton = NodePath("../../../../..")

[node name="arrow2" type="MeshInstance3D" parent="player_node/cam_container/cam_effects/player_camera/arrow"]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, 0, 0, 0)
mesh = SubResource("CylinderMesh_0oqto")
skeleton = NodePath("../../../../../..")

[node name="camera_positioner" type="Node3D" parent="player_node"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.5, 0)

[node name="ray_container" type="Node3D" parent="player_node"]
top_level = true

[node name="MeshInstance3D" type="MeshInstance3D" parent="player_node/ray_container"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.5, -1.8)
visible = false
mesh = SubResource("BoxMesh_f5igj")
skeleton = NodePath("../../..")

[node name="floor_ray" type="RayCast3D" parent="player_node/ray_container"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)
exclude_parent = false
target_position = Vector3(0, -1.3, 0)

[node name="ray_left" type="RayCast3D" parent="player_node/ray_container"]
transform = Transform3D(0.965926, 0.258819, 0, -0.258819, 0.965926, 0, 0, 0, 1, 0, 1, 0)
exclude_parent = false
target_position = Vector3(0, -1.3, 0)

[node name="ray_right" type="RayCast3D" parent="player_node/ray_container"]
transform = Transform3D(0.965926, -0.258819, 0, 0.258819, 0.965926, 0, 0, 0, 1, 0, 1, 0)
exclude_parent = false
target_position = Vector3(0, -1.3, 0)

[node name="ray_back" type="RayCast3D" parent="player_node/ray_container"]
transform = Transform3D(-4.2222e-08, -1.13133e-08, 1, -0.258819, 0.965926, 0, -0.965926, -0.258819, -4.37114e-08, 0, 1, 0)
exclude_parent = false
target_position = Vector3(0, -1.3, 0)

[node name="ray_forward" type="RayCast3D" parent="player_node/ray_container"]
transform = Transform3D(-4.2222e-08, 1.13133e-08, 1, 0.258819, 0.965926, 0, -0.965926, 0.258819, -4.37114e-08, 0, 1, 0)
exclude_parent = false
target_position = Vector3(0, -1.3, 0)

[node name="floor_shapecast" type="ShapeCast3D" parent="player_node/ray_container"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)
visible = false
shape = SubResource("CylinderShape3D_7u8l0")
target_position = Vector3(0, -0.585, 0)
max_results = 1

[node name="unstuck_timer" type="Timer" parent="player_node"]
one_shot = true

[node name="DEBUG" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="VBoxContainer" type="VBoxContainer" parent="DEBUG"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 30.0
grow_horizontal = 2
grow_vertical = 2

[node name="fps_label" type="Label" parent="DEBUG/VBoxContainer"]
layout_mode = 2
text = "DEBUG_LABEL"
label_settings = SubResource("LabelSettings_fuo7r")

[node name="state_label" type="Label" parent="DEBUG/VBoxContainer"]
layout_mode = 2
text = "DEBUG_LABEL"
label_settings = SubResource("LabelSettings_fuo7r")

[node name="grounded" type="Label" parent="DEBUG/VBoxContainer"]
layout_mode = 2
text = "DEBUG_LABEL"
label_settings = SubResource("LabelSettings_fuo7r")

[node name="slope_angle_directional" type="Label" parent="DEBUG/VBoxContainer"]
layout_mode = 2
text = "DEBUG_LABEL"
label_settings = SubResource("LabelSettings_fuo7r")

[node name="slope_angle_global" type="Label" parent="DEBUG/VBoxContainer"]
layout_mode = 2
text = "DEBUG_LABEL"
label_settings = SubResource("LabelSettings_fuo7r")

[node name="friction" type="Label" parent="DEBUG/VBoxContainer"]
layout_mode = 2
text = "DEBUG_LABEL"
label_settings = SubResource("LabelSettings_fuo7r")

[node name="over_slipping_threshold" type="Label" parent="DEBUG/VBoxContainer"]
layout_mode = 2
text = "DEBUG_LABEL"
label_settings = SubResource("LabelSettings_fuo7r")

[node name="current_surface" type="Label" parent="DEBUG/VBoxContainer"]
layout_mode = 2
text = "DEBUG_LABEL"
label_settings = SubResource("LabelSettings_fuo7r")

[node name="active_ray" type="Label" parent="DEBUG/VBoxContainer"]
layout_mode = 2
text = "DEBUG_LABEL"
label_settings = SubResource("LabelSettings_fuo7r")

[connection signal="timeout" from="player_node/unstuck_timer" to="player_node" method="_on_unstuck_timer_timeout"]
